<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AtasFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/namapembeli" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Isikan Nama Pembeli"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/namabarang" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Isikan Nama Barang"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jumlahbarang" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Isikan Jumlah Barang"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hargabarang" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Isikan Harga Barang"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uangbayar" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Isikan Uang Bayar"/>

    </LinearLayout>
    <Button
        android:layout_gravity="center"
        android:text="Proses"
        android:layout_height="wrap_content"
        android:layout_width="200dp"/>

</LinearLayout>