<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BawahFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            style="@style/TombolMerah"
            android:text="@string/totalbelanja" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/TombolMerah"
            android:hint="Isikan Total Belanja"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uangkembali" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Isikan Uang Kembali"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bonus" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Isikan Bonus"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keterangan" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Isikan Keterangan"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="Reset" />

        <Button
            android:text="Kembali"
            android:layout_height="wrap_content"
            android:layout_width="150dp"
            android:layout_marginRight="30dp" />
    </LinearLayout>


</LinearLayout>